MDL-41213 theme_bootstrapbase: fixed license filemanager overflow

--- a/theme/bootstrapbase/less/moodle/filemanager.less
+++ b/theme/bootstrapbase/less/moodle/filemanager.less
@@ -15,14 +15,15 @@
 .file-picker input[type="text"] {
     width: 265px;
 }
- .file-picker .fp-setlicense {
+.filemanager .fp-license,
+.file-picker .fp-setlicense {
     td {
         max-width: 265px;
     }
     select {
         max-width: 100%;
     }
- }
+}
 .fp-content-center {
     height: 100%;
     width: 100%;
